--- a/templates/complexityC_form.html
+++ b/templates/complexityC_form.html
@@ -16,7 +16,7 @@
                 <li><a href="#"><i class="bi bi-gear"></i>
                     <p>Settings</p></a></li>
                 <li><a href="{% url 'guidelines' %}"><i class="bi-card-list"></i>
-                    <p>Guidelines</p></a></li>
+                    <p>View WCC Guidelines</p></a></li>
                 <li><a href="{% url 'calculate_complexity_line_by_line' %}"><i class="fa-brands fa-java"></i>
                     <p>Java WCC Calculator</p></a></li>
                 <li><a href="{% url 'calculate_complexity_line_by_line_csharp' %}"><i
