--- a/templates/base.html
+++ b/templates/base.html
@@ -179,6 +179,14 @@
                     <li><a href="#" onclick="logoutUser(); return false;"> <i class="bi bi-box-arrow-right"></i>
                         <p>Logout</p></a></li>
                 </ul>
+                {% if "/games/github-scraper/" in request.path %}
+                    <!-- Sidebar for Accessibility & Gamification -->
+                    <hr>
+                    <ul class="nav">
+                        <li><a href="#"><i class="bi bi-trophy"></i>
+                            <p>Leaderboard</p></a></li>
+                    </ul>
+                {% endif %}
             </div>
         </div>
     {% endblock %}
